<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:textSize="60sp"
            tools:text="@string/txtSmartTable" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtUsuario" />

        <EditText
            android:id="@+id/txtPasswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="30dip"
            android:hint="@string/txtClave" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="Siguiente_menu"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/BotonLogin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>