<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1c981"
    tools:context=".Menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="aldrich"
                android:gravity="center"
                android:text="@string/menu"
                android:textColor="#000000"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/imageViewLogoMenu"
                android:layout_width="144dp"
                android:layout_height="213dp"
                android:layout_gravity="center"
                android:contentDescription="@string/antena"
                app:srcCompat="@drawable/tele" />

            <Button
                android:id="@+id/buttonVerMesas"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_menu"
                android:gravity="center"
                android:onClick="next_disponibilidad"
                android:text="@string/BotonDisponibilidad"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonVerEstadoRestaurante"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_menu"
                android:gravity="center"
                android:onClick="next_estado"
                android:text="@string/BotonEstadoTanque"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonCerrarSesion"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_menu"
                android:gravity="center"
                android:onClick="next_salir"
                android:text="@string/BotonSalir"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonBateria"
                android:layout_width="124dp"
                android:layout_height="101dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_menu"
                android:backgroundTint="#A5A5A5"
                android:gravity="center"
                android:onClick="next_bateria"
                android:text="@string/bateria"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>